✨ Add search + landing page
- Add session search functionality
- Add landing page website (GitHub Pages)
- Bump to v1.1.0

--- a/popup.html
+++ b/popup.html
@@ -281,6 +281,10 @@
 
     <div class="current-tabs" id="tabCount">Loading...</div>
 
+    <div class="search-bar" style="margin-bottom: 12px;">
+      <input type="text" id="searchInput" placeholder="Search sessions..." style="width: 100%; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.1); color: white; padding: 8px 12px; border-radius: 6px; font-size: 13px; outline: none;">
+    </div>
+
     <div class="sessions-header">
       <h2>Saved Sessions</h2>
     </div>
